--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -328,7 +328,7 @@ a.btn.btn-brikk.mensagem {
 
                                 <span>Olá,  <%
                                                 var usuario = RetornaUsuario();
-                                                Response.Write(usuario.RazaoSocial);
+                                                Response.Write(usuario.NomeFantasia.Split(' ')[0]);
                                 %>.</span>
                             </div>
                             <ul class="dropdown-perfil">
