--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -315,7 +315,7 @@ div#tabela_paginate span a {
         </div>
 
         <div class="filtro">
-            <div class="container">
+            <div class="container" style="display:none">
                 <input type="text" id="catSelBusca" placeholder="Qual serviço você precisa?      ">
                 <img src="../assets/imagens/lupa.png" alt="lupa" class="lupa" style="width: 20px; height: 20px;" onclick="buscaCats();">
             </div>
