--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -360,7 +360,7 @@ a.btn.btn-brikk.mensagem {
             </div>
 
             <div class="filtro">
-                <div class="container">
+                <div class="container" style="display:none">
                     <input type="text" id="servico" runat="server" placeholder="Qual serviço você precisa?      ">
                    <button id="btnBuscaCatSel" runat="server" onserverclick="btnBuscaCatSel_ServerClick"> <img src="../assets/imagens/lupa.png" alt="lupa" class="lupa" style="width: 20px; height: 20px;"></button>
                 </div>
