Consertei botão exibir X resultados por página

--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -229,6 +229,7 @@ div#tabela_filter {
     left: 0px;
     border-radius: 50%;
     outline: none;
+    text-align: center;
     border: none;
 }
 
