--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -186,6 +186,7 @@ div#tabela_filter {
     left: 0px;
     border-radius: 50%;
     outline: none;
+    text-align: center;
     border: none;
 }
 
