--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
@@ -124,8 +124,9 @@ p {
   font-family: Rajdhani-semi, sans-serif;
 }
 img {
-  display: block;
-  width: 100%;
+    position: relative;
+    display: block;
+    width: 100%;
 }
 
 /* header */
