--- a/Bsk.Solution/Bsk.Site/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/assets/css/dashboard.css
@@ -166,7 +166,7 @@ nav.menu-dashboard {
   flex-direction: column;
 }
 .subtitulo_card h3 {
-  background: #770e18;
+  background: #f08f00;
   color: #fff;
   font-family: Rajdhani-semi, sans-serif;
   font-size: 20px;
