--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
@@ -168,7 +168,7 @@ nav.menu-dashboard {
   flex-direction: column;
 }
 .subtitulo_card h3 {
-  background: #f08f00;
+  background: #770e18;
   color: #fff;
   font-family: Rajdhani-semi, sans-serif;
   font-size: 20px;
