--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -318,9 +318,11 @@ a.btn.btn-brikk.mensagem {
                 <a href="dashboard.aspx">
                     <img src="../assets/imagens/logo.png" alt="BRIKK logomarca" class="logo">
                 </a>
-                 <h3>
-                    <font color="#ffffff">Área Parceiro</font>
-                 </h3>
+                  <div class="subtitulo_card">
+                     <h3> 
+                        <font color="#ffffff">Área Parceiro</font>
+                     </h3>
+                 </div>
                 <nav class="menu" id="nav">
                     <button id="btn-mobile">
                         Menu
