--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
@@ -191,6 +191,12 @@ header {
   background: #f08f00;
   color: #770e18 !important;
 }
+.minhaclasse2 {
+    color: darkred;
+    font-size: 25px;
+    text-align: center;
+    vertical-align: top;
+}
 .filtro .container {
   display: flex;
   position: relative;
