--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -277,7 +277,7 @@ div#tabela_paginate span a {
             </a>
                 <div>
                     <h1 class="titulo" >
-                        <font color="#ffffff">Área Cliente</font>
+                        <font color="#ffffff">Cliente</font>
                     </h1>
                 </div>
             <nav class="menu" id="nav">
