--- a/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
@@ -46,7 +46,7 @@ textarea {
     position: absolute;
     width: 40px;
     top: 50px;
-    background: transparent;
+    background: #770e18;
     font-size: 25px;
     outline: none;
     cursor: pointer !important;
@@ -54,8 +54,6 @@ textarea {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     height: 40px;
-    color: #9a9a99;
-    border: 1px solid #9a9a9a;
     right: -40px;
     transition: 0.3s ease;
     opacity: 1;
