--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
@@ -45,7 +45,7 @@ textarea {
     position: absolute;
     width: 40px;
     top: 50px;
-    background: white;
+    background: #770e18;
     font-size: 25px;
     outline: none;
     cursor: pointer !important;
@@ -53,8 +53,6 @@ textarea {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     height: 40px;
-    color: #9a9a99;
-    border: 1px solid #9a9a9a;
     right: -40px;
     transition: 0.3s ease;
     opacity: 0.4;
