--- a/Bsk.Solution/Bsk.Site/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/assets/css/dashboard.css
@@ -44,7 +44,7 @@ textarea {
     position: absolute;
     width: 40px;
     top: 50px;
-    background: white;
+    background: #770e18;
     font-size: 25px;
     outline: none;
     cursor: pointer !important;
@@ -52,8 +52,7 @@ textarea {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     height: 40px;
-    color: #fff;
-    border: 1px solid #9a9a9a;
+    color: #770e18;
     right: -40px;
     transition: 0.3s ease;
     display: flex;
