--- a/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
@@ -583,7 +583,7 @@ nav.menu-dashboard {
   border-bottom: 1px solid #770e18;
   padding-bottom: 20px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 40px;
 }
 .servico_item ul li > div {
