--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -318,11 +318,9 @@ a.btn.btn-brikk.mensagem {
                 <a href="dashboard.aspx">
                     <img src="../assets/imagens/logo.png" alt="BRIKK logomarca" class="logo">
                 </a>
-                  <div>
-                     <h1 class="titulo" >
-                         <font color="#ffffff">Área Fornecedor</font>
-                     </h1>
-                 </div>
+                 <h3>
+                    <font color="#ffffff">Área Parceiro</font>
+                 </h3>
                 <nav class="menu" id="nav">
                     <button id="btn-mobile">
                         Menu
