--- a/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/style.css
@@ -124,10 +124,10 @@ body {
     color:darkorange;
 }
 p {
-  font-size: 16px;
-  line-height: 24px;
-  color: #575756;
-  font-family: Rajdhani-semi, sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    color: #770e18;
+    font-family: Rajdhani-semi, sans-serif;
 }
 img {
   display: block;
