--- a/Bsk.Solution/Bsk.Site/Admin/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Admin/Master/Layout.Master
@@ -2,6 +2,14 @@
 
 <!DOCTYPE html>
 
+<style>
+    /* CAPITALIZAÇÃO DO NOME PRÓPRIO*/
+ .uppercase {
+     text-transform: capitalize;
+
+        }
+</style>
+
 <html>
 <head runat="server">
     <meta charset="utf-8">
@@ -51,9 +59,9 @@
             </div>
             <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
             <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 text-center">
-                <a href="" class="pull-right link-brikk hidden-sm hidden-xs mr-20"><%
-                                                                                       var usuario = RetornaUsuario();
-                                                                                       Response.Write(usuario.Nome);
+                <a href="" class="uppercase pull-right link-brikk hidden-sm hidden-xs mr-20"><%
+                    var usuario = RetornaUsuario();
+                    Response.Write(usuario.Nome);
                 %></a>
                 <a href="" class="text-center link-brikk hidden-lg hidden-md">Olá Amiguinho</a>
                 <i class="glyphicon glyphicon-menu-hamburger btn-menu pull-right" title="MENU"></i>
