--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -38,7 +38,7 @@
 
     <script src="js/jquery.mask.js"></script>
     <script src="js/datatables.min.js"></script>
-    <script src="sweetalert2.all.min.js"></script>
+    <script src="js/sweetalert2.all.min.js"></script>
     <script src="js/rating.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/master.js"></script>
