--- a/Bsk.Solution/Bsk.Site/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/assets/css/dashboard.css
@@ -377,12 +377,14 @@ nav.menu-dashboard {
 }
 .eleva_sifra {
     position: absolute;
-    top: 2px;
+    top: 8px;
     background: #f08f00;
     border-radius: 50%;
     padding: 5px 13px;
     box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3);
     left: 5px;
+    width: 43px;
+    height: 43px;
 }
 
 .filtros_card {
