--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/sobre.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/sobre.css
@@ -23,6 +23,23 @@
   src: url("../fonts/Ubuntu-Bold.ttf") format("opentype");
   font-display: swap;
 }
+div:where(.swal2-container).swal2-center > .swal2-popup {
+    border-radius: 40px !important;
+    font-size: 15px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-icon).swal2-info {
+    border-color: #770e18;
+    color: #770e18;
+}
 .contato {
   background: #770e18;
   padding: 75px 0 85px 45px;
