--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/tabsmenu.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/tabsmenu.css
@@ -47,7 +47,23 @@
   border-bottom-left-radius: 50px;
   border-bottom-right-radius: 50px;
 }
+div:where(.swal2-container).swal2-center > .swal2-popup {
+    border-radius: 40px !important;
+    font-size: 15px !important;
+}
 
+div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-icon).swal2-info {
+    border-color: #770e18;
+    color: #770e18;
+}
 @keyframes show {
   from {
     opacity: 0;
