--- a/Bsk.Solution/Bsk.Site/Fornecedor/css/master.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/css/master.css
@@ -237,6 +237,23 @@ h3 {
     margin-bottom: -60px;
     transition: all ease 0.5s;
 }
+div:where(.swal2-container).swal2-center > .swal2-popup {
+    border-radius: 40px !important;
+    font-size: 15px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-icon).swal2-info {
+    border-color: #770e18;
+    color: #770e18;
+}
 
     .tituloServico:hover {
         background: #750407;
