arrumando o nav e colocando o fundo com imagem

--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
@@ -95,7 +95,8 @@ textarea {
 }
 nav.menu-dashboard {
   padding: 97px 0 170px 0;
-  background: #770e18;
+  background-color: #770e18;
+  background-image: url('../imagens/fundo.png');
   display: flex;
   flex-direction: column;
   justify-content: space-between;
