--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -109,12 +109,19 @@
                 width: 100% !important;
                 top: 120px !important;
                 right: 0 !important;
-                background: #770e18;
+                background-color: #770e18;
+                background-image: url('../imagens/fundo.png');
                 z-index: 100;
                 transition: 0.3s !important;
                 visibility: hidden;
                 overflow-y: hidden;
             }
+        }
+        header {
+            height: 213px;
+            background-color: #770e18;
+            background-image: url('../assets/imagens/fundo.png');
+            position: relative;
         }
         
 
