--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -115,7 +115,7 @@
         }
         header {
             background-color: #770e18;
-            background-image: url('../imagens/fundo.png');
+            background-image: url('../assets/imagens/fundo.png');
             background-repeat: repeat; /* Repete a imagem de fundo na vertical e na horizontal */
             position: relative;
         }
