Revert "Merge branch 'rodrigo' of https://bitbucket.org/devbrasuka/brikk into rodrigo"
This reverts commit 0d3f85554a76b7df9b16e2b5dec2f2b7c99f4430, reversing
changes made to 8b4c741896cc8d43ab0dc117717734db8e10c4c6.

--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -109,19 +109,12 @@
                 width: 100% !important;
                 top: 120px !important;
                 right: 0 !important;
-                background-color: #770e18;
-                background-image: url('../imagens/fundo.png');
+                background: #770e18;
                 z-index: 100;
                 transition: 0.3s !important;
                 visibility: hidden;
                 overflow-y: hidden;
             }
-        }
-        header {
-            height: 213px;
-            background-color: #770e18;
-            background-image: url('../assets/imagens/fundo.png');
-            position: relative;
         }
         
 
