--- a/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
@@ -79,13 +79,12 @@ textarea {
   height: auto;
 }
 nav.menu-dashboard {
-    padding: 97px 0 170px 0;
-    background-color: #770e18;
-    background-image: url('../imagens/fundo.png');
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
+  padding: 97px 0 170px 0;
+  background: #770e18;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
 }
 .menu-dashboard ul li a {
   display: flex;
