--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/dashboard.css
@@ -74,8 +74,7 @@ textarea {
 }
 nav.menu-dashboard {
   padding: 97px 0 170px 0;
-  background-color: #770e18;
-  background-image: url('../imagens/fundo.png');
+  background: #770e18;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
