--- a/Bsk.Solution/Bsk.Site/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/assets/css/style.css
@@ -146,6 +146,7 @@ header {
 }
 .filtro {
   height: 93px;
+  background: url(../imagens/fundo.png) no-repeat;
   background-size: cover;
   width: 100%;
 }
