--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/dashboard.css
@@ -16,6 +16,23 @@
   }
 }
 
+div:where(.swal2-container).swal2-center > .swal2-popup {
+    border-radius: 40px !important;
+    font-size: 15px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-icon).swal2-info {
+    border-color: #770e18;
+    color: #770e18;
+}
 
 input,
 textarea {
@@ -78,7 +95,8 @@ textarea {
 }
 nav.menu-dashboard {
   padding: 97px 0 170px 0;
-  background: #770e18;
+  background-color: #770e18;
+  background-image: url('../imagens/fundo.png');
   display: flex;
   flex-direction: column;
   justify-content: space-between;
