--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/style.css
@@ -127,6 +127,23 @@ img {
   display: block;
   width: 100%;
 }
+div:where(.swal2-container).swal2-center > .swal2-popup {
+    border-radius: 40px !important;
+    font-size: 15px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    border-radius: 20px !important;
+}
+
+div:where(.swal2-icon).swal2-info {
+    border-color: #770e18;
+    color: #770e18;
+}
 
 /* header */
 .logo {
@@ -135,8 +152,10 @@ img {
   flex: 1;
 }
 header {
-  height: 213px;
-  background-color: #770e18;
+    height: 213px;
+    background-color: #770e18;
+    background-image: url('../assets/imagens/fundo.png');
+    position: relative;
 }
 .menu-topo {
   display: flex;
@@ -147,7 +166,6 @@ header {
 }
 .filtro {
   height: 93px;
-  background: url(../imagens/fundo.png) no-repeat;
   background-size: cover;
   width: 100%;
 }
