--- a/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/style.css
@@ -155,6 +155,7 @@ img {
 header {
   height: 213px;
   background-color: #770e18;
+  background-image: url(../assets/imagens/fundo.png);
 }
 .menu-topo {
   display: grid;
@@ -164,7 +165,6 @@ header {
 }
 .filtro {
   height: 93px;
-  background: url(../imagens/fundo.png) no-repeat;
   background-size: cover;
   width: 100%;
 }
