--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
@@ -136,8 +136,9 @@ img {
   flex: 1;
 }
 header {
-  height: 213px;
-  background-color: #770e18;
+    height: 213px;
+    background-color: #770e18;
+    background-image: url(../imagens/fundo.png);
 }
 .menu-topo {
   display: grid;
@@ -147,7 +148,6 @@ header {
 }
 .filtro {
   height: 93px;
-  background: url(../imagens/fundo.png) no-repeat;
   background-size: cover;
   width: 100%;
 }
