--- a/Bsk.Solution/Bsk.Site/Fornecedor/css/master.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/css/master.css
@@ -237,6 +237,9 @@ h3 {
     margin-bottom: -60px;
     transition: all ease 0.5s;
 }
+
+/*sweet alert style*/
+
 div:where(.swal2-container).swal2-center > .swal2-popup {
     border-radius: 40px !important;
     font-size: 14px !important;
@@ -252,10 +255,26 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
     background-color: #f08f00 !important;
 }
 
-div:where(.swal2-icon).swal2-info {
-    border-color: #770e18;
-    color: #770e18;
+div:where(.swal2-container) button:where(.swal2-styled).swal2-deny {
+    border-radius: 20px !important;
+    background-color: #f08f00 !important;
 }
+
+div:where(.swal2-icon).swal2-info {
+    border-color: #770e18 !important;
+    color: #770e18 !important;
+}
+
+.swal2-icon.swal2-error {
+    border-color: #770e18 !important;
+    color: #770e18 !important;
+}
+
+.swal2-icon.swal2-error [class^=swal2-x-mark-line] {
+    background-color: #770e18 !important;
+}
+/*sweet alert style*/
+
 
     .tituloServico:hover {
         background: #750407;
