--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/cadastros.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/cadastros.css
@@ -159,24 +159,39 @@
     top: -6px;
     border-radius: 50%;
 }
+/*sweet alert style*/
+
 div:where(.swal2-container).swal2-center > .swal2-popup {
     border-radius: 40px !important;
-    font-size: 15px !important;
+    font-size: 14px !important;
 }
 
 div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
     border-radius: 20px !important;
+    background-color: #770e18 !important;
 }
 
 div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
     border-radius: 20px !important;
+    background-color: #f08f00 !important;
+}
 
+div:where(.swal2-container) button:where(.swal2-styled).swal2-deny {
+    border-radius: 20px !important;
+    background-color: #f08f00 !important;
 }
 
 div:where(.swal2-icon).swal2-info {
-    border-color: #770e18;
-    color: #770e18;
+    border-color: #770e18 !important;
+    color: #770e18 !important;
 }
+
+.swal2-icon.swal2-error {
+    border-color: #770e18 !important;
+    color: #770e18 !important;
+}
+
+/*sweet alert style*/
 
 /* responsivo */
 @media only screen and (min-width: 900px) and (max-width: 1150px) {
