--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/dashboard.css
@@ -1405,8 +1405,45 @@ label.subtitulo_card_1.subtitulo_1 {
   padding: 0 10%;
   margin-bottom: 30px;
 }
-@media (max-width: 800px) {
-  .cli-cotacao .acessos {
-    flex-direction: column;
-  }
+
+/*sweet alert style*/
+
+div:where(.swal2-container).swal2-center > .swal2-popup {
+    border-radius: 40px !important;
+    font-size: 14px !important;
 }
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
+    border-radius: 20px !important;
+    background-color: #770e18 !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    border-radius: 20px !important;
+    background-color: #f08f00 !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-deny {
+    border-radius: 20px !important;
+    background-color: #f08f00 !important;
+}
+
+div:where(.swal2-icon).swal2-info {
+    border-color: #770e18 !important;
+    color: #770e18 !important;
+}
+
+.swal2-icon.swal2-error {
+    border-color: #770e18 !important;
+    color: #770e18 !important;
+}
+.swal2-icon.swal2-error [class^=swal2-x-mark-line] {
+    background-color: #770e18 !important;
+}
+    /*sweet alert style*/
+
+    @media (max-width: 800px) {
+        .cli-cotacao .acessos {
+            flex-direction: column;
+        }
+    }
