--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/style.css
@@ -397,12 +397,13 @@ footer {
   background: url(../imagens/fundo-footer.png) no-repeat center center;
   background-size: cover;
   width: 100%;
-  height: 140px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-footer > a {
+
+> a {
   margin-right: 35px;
 }
 footer > div {
