--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/style.css
@@ -397,13 +397,12 @@ footer {
   background: url(../imagens/fundo-footer.png) no-repeat center center;
   background-size: cover;
   width: 100%;
-  height: 200px;
+  height: 140px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-> a {
+footer > a {
   margin-right: 35px;
 }
 footer > div {
