carregamento de cotacoes

--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -343,7 +343,7 @@ a.btn.btn-brikk.mensagem {
 
                                 <span class="uppercase">Olá,  <%
                                                 var usuario = RetornaUsuario();
-                                                Response.Write(usuario.NomeFantasia.Split(' ')[0]);
+                                                Response.Write(usuario.nomeFantasia.Split(' ')[0]);
                                 %>.</span>
                             </div>
                             <ul class="dropdown-perfil">
