--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -398,7 +398,9 @@ a.btn.btn-brikk.mensagem {
                     <li><a href="em-andamento.aspx" class="andamento">
                         <img src="../assets/imagens/andamento.svg" style="width: 20px;" alt="ícone"><span>Em Andamento</span></a>
                     </li>
-                    
+                    <li><a href="finalizado.aspx" class="finalizada">
+                        <img src="../assets/imagens/andamento.svg" style="width: 20px;" alt="ícone"><span>Finalizado</span></a>
+                    </li>
                     <li><a href="notificacoes.aspx" class="notificacoes">
                         <img src="../assets/imagens/documentacao.svg" style="width: 20px;" alt="ícone"><span>Notificações</span></a>
                     </li><!--
