--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../assets/css/dashboard.css">
     <%--<link rel="icon" type="image/png" href="../img/favico.png" />--%>
     <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
 
     <%-- <link rel="stylesheet" href="../css/default.css">
@@ -33,7 +33,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Outros scripts -->
 
     <script src="js/jquery.mask.js"></script>
@@ -268,7 +268,21 @@ div#tabela_paginate span a {
         justify-content: flex-start;
         margin-top: 20px;
     }
-}
+     .menu-dashboard {
+        display: none !important; /* Ocultar apenas a lista de itens de menu, não o botão */
+    }
+
+    .menu-dashboard {
+        display: block !important; /* Mostrar o menu novamente ao adicionar a classe 'active' */
+    }
+
+    .menu-dashboard .open-menu {
+        display: block !important; /* Manter o botão sempre visível mesmo que o resto do menu esteja oculto */
+    }
+    .seta{
+        margin-top: 9px !important;
+        margin-left: 6px !important;
+    }
 /* CAPITALIZAÇÃO DO NOME PRÓPRIO*/
  .uppercase {
      text-transform: capitalize;
@@ -344,7 +358,7 @@ div#tabela_paginate span a {
             <ul class="menu-dash">
                 <li>
                     <a href="cliente-dashboard.aspx" class="dash">
-                        <img src="../assets/imagens/dashboard.svg" style="width: 20px;" alt="ícone">
+                        <img src="../assets/imagens/dashboard.svg" style="width: 20px;" alt="ícone" class="seta">
                         <span>Dashboard</span>
                     </a>
                 </li>
@@ -552,6 +566,17 @@ div#tabela_paginate span a {
             s0.parentNode.insertBefore(s1, s0);
         })();
     </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const openMenuButton = document.querySelector('.open-menu');
+            const menuDashboard = document.querySelector('.menu-dashboard');
+
+            openMenuButton.addEventListener('click', function () {
+                menuDashboard.classList.toggle('active');
+            });
+        });
+    </script>
+
 
     
     <!--End of Tawk.to Script-->
