--- a/Bsk.Solution/Bsk.Site/Views/Home/Index.cshtml
+++ b/Bsk.Solution/Bsk.Site/Views/Home/Index.cshtml
@@ -129,7 +129,7 @@
                             <h4>@p1.Subtitulo</h4>
                         </a>
                     </div>
-                    <div class="col col-md-4">
+                    <div class="col col-md-4 col-sm-12">
                         <div class="col col-md-12">
                             <a href="~/Page/artigo.aspx?Id=@p2.IdPublicacao&Escritor=@p2.Login&Artigo=@p2.Titulo.Replace("\"", "")">
                                 <img src="~/img_timeline/@p2.ImgPublicacao" class="img-responsive" width="100%" /></center><br>
