--- a/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/cadastros.css
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/assets/css/cadastros.css
@@ -132,7 +132,13 @@ div:where(.swal2-icon).swal2-info {
     background-color: #d7d7d7;
     color: #3c3c3b;
     width: 115px;
-    box-shadow: 5px 5px 8px #191919;
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .subtitulo_contato {
