--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -13,6 +13,7 @@
     <title>BRIKK </title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/dashboard.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <%--<link rel="icon" type="image/png" href="../img/favico.png" />--%>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -266,7 +267,9 @@ div#tabela_paginate span a {
             div#tabela_filter input[type="search"], .dataTables_length label {
                 width: 100% !important;
             }
-
+            .menu-dash{
+                padding-left: 0px!important;
+            }
             div#tabela_paginate {
                 justify-content: flex-start;
                 margin-top: 20px;
@@ -280,9 +283,9 @@ div#tabela_paginate span a {
                 display: block !important; /* Mostrar o menu novamente ao adicionar a classe 'active' */
             }
 
-                .menu-dashboard .open-menu {
-                    display: block !important; /* Manter o botão sempre visível mesmo que o resto do menu esteja oculto */
-                }
+            .menu-dashboard .open-menu {
+                display: block !important; /* Manter o botão sempre visível mesmo que o resto do menu esteja oculto */
+            }
 
             .seta {
                 margin-top: 9px !important;
