--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -274,7 +274,11 @@ div#tabela_paginate span a {
                 justify-content: flex-start;
                 margin-top: 20px;
             }
-
+            [data-dropdow-perfil]:hover .dropdown-perfil, [data-dropdow-perfil].active-submenu .dropdown-perfil {
+                display: flex !important;
+                justify-content: flex-start !important;
+                flex-direction: row;
+            }
             .menu-dashboard {
                 display: none !important; /* Ocultar apenas a lista de itens de menu, não o botão */
             }
@@ -321,19 +325,27 @@ div#tabela_paginate span a {
             }*/
 
             .dropdown-perfil li a {
-                color: #fff !important;
+                color: #7b1b27 !important;
             }
 
             [data-dropdow-perfil].active-submenu .perfil {
                 padding: 0px;
             }
             .menu-itens li {
-                padding: 2rem 0;
                 border-bottom: 0px;
             }
             #nav.active ul {
+                padding: 0px 20px;
                 height: 340px;
                 background: transparent;
+                margin-top: 30px;
+            }
+            .menu ul {
+                display: block !important;
+                width: 300% !important;
+                top: -20px !important;
+                left: -300px !important;
+                overflow-y: initial !important;
             }
         }
     </style>
@@ -355,7 +367,7 @@ div#tabela_paginate span a {
 
                     <li data-dropdow-perfil class="data-dropdow-perfil">
                         <div class="perfil" id="perfil">
-                            <img src="../assets/imagens/avatar.png" alt="avatar" style="width: 20%;">
+                            <img src="../assets/imagens/avatar.png" alt="avatar">
                             <%var user = RetornaUsuario(); %>
                             <%var nomes = user.Nome.Split(' ');  %>
                             <span class="uppercase">Olá, <%Response.Write(nomes[0]); %>.</span>
@@ -671,7 +683,7 @@ div#tabela_paginate span a {
          document.addEventListener('DOMContentLoaded', handleResize);
 
      </script>
-<%--    <script>
+    <script>
         const dropdown = document.querySelector('.data-dropdow-perfil');
 
         window.addEventListener('resize', function () {
@@ -685,7 +697,8 @@ div#tabela_paginate span a {
             dropdown.classList.add('active-submenu');
         }
 
-    </script>--%>
+
+    </script>
     <script>
         const perfilMobile = document.querySelector('.perfilMobile');
 
@@ -698,7 +711,7 @@ div#tabela_paginate span a {
                     if (window.innerWidth > 768) {
                         div.style.display = 'none';
                     } else {
-                        div.style.display = 'flex';
+                        div.style.display = 'none';
                     }
                 } else {
                     console.error('Elemento com ID "' + divPerfilMobile + '" não encontrado.');
