--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -346,6 +346,7 @@ div#tabela_paginate span a {
                 top: -20px !important;
                 left: -300px !important;
                 overflow-y: initial !important;
+                background: transparent;
             }
         }
     </style>
