problema no menu lateral

--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -53,7 +53,12 @@
         <![endif]-->
 
     <style>
-
+        nav.menu-dashboard {
+            display: flex;
+            justify-content: space-between;
+            position: relative;
+            flex-direction: row-reverse;
+        }
         .acessos{
             display:flex;
             justify-content:space-evenly;
