--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -564,7 +564,7 @@ div#tabela_paginate span a {
         function carregaMinhasCotacoes() {
             var url = window.location.href;
 
-            if (url.includes("cadastro-cotacao.aspx")) {
+            if (url.includes("cadastro-solicitacao.aspx")) {
                 salvarCotacaoLink("minhas-cotacoes.aspx");
             } else {
                 window.location.href = "minhas-cotacoes.aspx";
@@ -573,7 +573,7 @@ div#tabela_paginate span a {
 
         function carregaNovaCotacao() {
             var url = window.location.href;
-            if (url.includes("cadastro-cotacao.aspx")) {
+            if (url.includes("cadastro-solicitacao.aspx")) {
                 salvarCotacaoLink("buscar-servico.aspx");
             }
             else {
@@ -583,7 +583,7 @@ div#tabela_paginate span a {
 
         function carregaPerfil() {
             var url = window.location.href;
-            if (url.includes("cadastro-cotacao.aspx")) {
+            if (url.includes("cadastro-solicitacao.aspx")) {
                 salvarCotacaoLink('perfil.aspx');
             }
             else {
